--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 distribution.</p>
 
  
-<p>At the root of the distribution is the <a href="../readfirst.html">
+<p>At the root of the distribution is the <a href="readfirst.html">
 readfirst.html</a> document.&nbsp; This contains important and late-breaking 
 information on the SSCLI 2.0 distribution. Also how to build <a href= "building/windows2003.html">.NET Server</a> Here are <a href="default.htm">Windows XP UX Guidelines</a></p>
 
