--- a/readfirst.html
+++ b/readfirst.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Microsoft Shared Source CLI</title>
-<link rel="stylesheet" type="text/css" href="docs/rotor.css">
+<link rel="stylesheet" type="text/css" href="rotor.css">
 </head>
 
 <body>
