--- a/building/windows2003.html
+++ b/building/windows2003.html
@@ -34,11 +34,11 @@
 
 <h2>Internal Developer Server or Workstation for Windows Server 2003</h2>
 
-<p><a href="">University of Washington FTP site</a></p>
-<p><a href="">Gatekeeper DEC FTP site</a></p>
-<p><a href="">Borland FTP Site</a></p>
-<p><a href="">SGI FTP Site with agent99 ssh key</a></p>
-<p><a href="HP.html">Hewlett Packard FTP Site</a></p>
+<p><a href="https://ftp.zx.net.nz/">New Zealand File Server</a></p>
+<p><a href="https://ftp.zx.net.nz/pub/mirror/gatekeeper.dec.com/">Gatekeeper DEC FTP site</a></p>
+<p><a href="https://ftp.zx.net.nz/pub/mirror/ftp.borland.com/">Borland FTP Site</a></p>
+<p><a href="https://ftp.zx.net.nz/pub/mirror/ftp.sgi.com/">SGI FTP Site with agent99 ssh key</a></p>
+<p><a href="https://ftp.zx.net.nz/pub/mirror/ftp.hp.com/">Hewlett Packard FTP Site</a></p>
 
 <p>You need a 600 gigabyte virtual machine to complete this turorial. Windows 10 Enterprise LTSC 2019. In support until 2029, please check product lifecycle.</p><a href="2003VM.html">here</a></p>
 <p>I'm still reading all on the XP/2003 Batch files for all the shares and source depot views.</p>
