--- a/building/windows2003.html
+++ b/building/windows2003.html
@@ -44,8 +44,6 @@
 <p>I'm still reading all on the XP/2003 Batch files for all the shares and source depot views.</p>
 <p>The Original Code Center Priemium Site had a Site had a Source Directory. Put your Windows SDK's, DDK's, OPK's, AIK's in eack coresponding version from Windows 1.0 to 2022. Until Russia hacks Code Center Primeium some more. Or until Microsoft gives Sphinx Logic's Founder a MVP for Building XP/2003. We are taking courses in ethical hacking.</p>
 
-<h2><a href="https://web.archive.org/web/20110527022943/http://www.microsoft.com/resources/sharedsource/windowsacademic/default.mspx">Microsoft Acedemic Program</a></h2>
-
 <h2>Microsoft UNIX Code Migration Guide</h2>
 
 <h2><a href="interix.html">Setting up Interix</a></h2>
@@ -65,6 +63,7 @@
 <p>If you need to use 'expand /r' to X:\ENGLISH\WIN2003\ENT\I386\* D:\binaries.x86fre from a retail DVD.</p>
 
 <ul>
+<li><a href="https://web.archive.org/web/20110527022943/http://www.microsoft.com/resources/sharedsource/windowsacademic/default.mspx">Microsoft Acedemic Program</a></li>
 <li><a href="https://docs.oracle.com/cd/E19957-01/819-5134/osp-win-setup/index.html">Setting Up a Windows Remote Installation Services Server</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Remote_Installation_Services">Remote Installation Services</a></li>
 <p>Make a Boot Floppy and build Goliath</p>
