--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <li><a href="#security">A Note About Security</a></li>
   <li><a href="#licenses">Yet More on Licensing</a></li>
   <li><a href="#DocumentationStyle">A Comment on Documentation Style</a></li>
+  <li><a href="docs/index.html">Documentation Index</a></li>
 </ul>
 <h2><a name="WhatsNew"></a>What's New in  the 
 Microsoft Shared Source CLI 2.0 Release?</h2>
