--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 <h2 class="top">Welcome!</h2>
 
-<img src="windows.net.png" alt="Windows.net" width="200" height="200"> 
+<img src="docs/psd/windows.net.jpg" alt="Windows.net" > 
 
 <h2><a href="defualt.html">Enter Site</a>
