--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <h2 class="top">Welcome!</h2>
 
-<img src="docs/psd/windows.net.jpg" alt="Windows.net" > 
-
-<h2><a href="defualt.html">Enter Site</a>
+<img src="docs/psd/windows.net.jpg" alt="Windows.net"> 
+<table width="90%" border="1">
+<tr>
+      <td width="31%"><b><a href="defualt.html">defualt.html</a></b></td>
+      <td width="69%">Here is documentation for the SSCLI and Windows</td>
+</tr>
+</table>
