--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </tr>
 <tr>
       <td width="31%"><b><a href=""></a></b></td>
-      <td width="69%">Sharede Source Inititive and Code Center Priemium</td>
+      <td width="69%">Shared Source Inititive and Code Center Priemium</td>
 </tr>
 <tr>
       <td width="31%"><b><a href="https://www.microsoft.com/en-us/securityengineering/gsp">https://www.microsoft.com/en-us/securityengineering/gsp</a></b></td>
