--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <td width="69%">Here is documentation for the SSCLI and Windows</td>
 </tr>
 <tr>
-      <td width="31%"><b><a href=""></a></b></td>
+      <td width="31%"><b><a href="docs/priemium/Shared Source Initiative Debugging.htm">Shared Source Initiative Debugging.htm</a></b></td>
       <td width="69%">Shared Source Inititive and Code Center Priemium</td>
 </tr>
 <tr>
