--- a/index.html
+++ b/index.html
@@ -24,4 +24,16 @@
       <td width="31%"><b><a href="https://www.microsoft.com/en-us/securityengineering/gsp">https://www.microsoft.com/en-us/securityengineering/gsp</a></b></td>
       <td width="69%">Government Security Program</td>
 </tr>
+<tr>
+      <td width="31%"><b><a href="https://learn.microsoft.com/en-us/windows/win32/api/dbghelp/">Debug Help Header</a></b></td>
+      <td width="69%">Debug Help</td>
+</tr>
+<tr>
+      <td width="31%"><b><a href="https://learn.microsoft.com/en-us/windows/win32/debug/symbol-servers-and-symbol-stores">Symbol Server</a></b></td>
+      <td width="69%">Microsoft Symbol Server</td>
+</tr>
+<tr>
+      <td width="31%"><b><a href="https://learn.microsoft.com/en-us/windows/win32/debug/source-server-and-source-indexing">Source Server</a></b></td>
+      <td width="69%">Microsoft Source Server</td>
+</tr>
 </table>
