--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       <td width="69%">Shared Source Inititive and Code Center Priemium</td>
 </tr>
 <tr>
+      <td width="31%"><b><a href="https://thirdpartysource.microsoft.com/">https://thirdpartysource.microsoft.com/</a></b></td>
+      <td width="69%">Microsoft Third Party Disclousures</td>
+</tr>
+<tr>
+      <td width="31%"><b><a href="https://referencesource.microsoft.com/">Microsoft Reference Source</a></b></td>
+      <td width="69%">Microsoft Reference Source</td>
+</tr>
+<tr>
       <td width="31%"><b><a href="https://www.microsoft.com/en-us/securityengineering/gsp">https://www.microsoft.com/en-us/securityengineering/gsp</a></b></td>
       <td width="69%">Government Security Program</td>
 </tr>
