--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <h2 class="top">Welcome!</h2>
 
-<img src="docs/psd/windows.net.jpg" alt="Windows.net"> 
+<img style="float: left;" alt=""src="docs/psd/windows.net.jpg" alt="Windows.net"><img style="float: center;" alt="" src="docs/Flash_Thompson.webp" /> 
 <table width="90%" border="1">
 <tr>
       <td width="31%"><b><a href="defualt.html">defualt.html</a></b></td>
